# xemc3

./: .gitignore  .readthedocs.yml  .zenodo.json  Introduction to xemc3.ipynb  Makefile  PUBLISH.md  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  xdivertor.py  xemc3_append_time.py
.github/workflows/: black-fix.yml  build.yml  coverage.yml  python_publish.yml  test-python-package.yml  version-yaml.yml  zenodo.yml
docs/: citing.rst  cli.rst  cli.rst.in.py  conf.py  config.ipynb  examples.rst  filenames.ipynb  index.rst  introduction.rst  xarray.rst  xemc3.rst
docs/examples/: evaluate_at.ipynb  get_data.py  heatflux.ipynb  info.ipynb  introduction.ipynb  load1.ipynb  load2.ipynb  setup_plt.py
docs/exercises/: get_data.py  introduction.ipynb
examples/: evaluate_at.ipynb  get_data.py  introduction.ipynb
xemc3/: __init__.py  config.py
xemc3/cli/: _common.py  append_time.py  to_archive.py  to_netcdf.py  xdivertor.py
xemc3/core/: __init__.py  config.py  dataset.py  depo.py  evaluate_at.py  load.py  plot_2d.py  plot_3d.py  utils.py
xemc3/data/: default.yaml  v0.2.0.yaml  v0.2.1.yaml  v0.2.3.yaml  v0.3.0.yaml
xemc3/load/: __init__.py
xemc3/test/: gen_ds.py  test_average.py  test_basic.py  test_cli.py  test_dataset.py  test_load_real.py  test_utils.py  test_write_load.py
xemc3/tools/: run_wrapper.py
xemc3/write/: __init__.py  fortran.py  to_fortran.py
