[metadata]
name = xemc3
url = https://github.com/dschwoerer/xemc3
author = David Schwörer
author_email = dave@ipp.mpg.de
description = Collect data from EMC3 runs in python using xarray
license = GPL
python_requires = >=3.6
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Visualization

[options]
setup_requires =
    setuptools>=42
    setuptools_scm[toml]>=3.4
    setuptools_scm_git_archive
install_requires =
    xarray>=0.16.0
    matplotlib>=3.1.1,!=3.3.0,!=3.3.1,!=3.3.2
    netcdf4>=1.4.0
    importlib-metadata; python_version < "3.8"
    numpy >= 1.13.0
tests_require =
    pytest >= 3.3.0
    mayavi
    tvtk
    matplotlib
include_package_data = True
packages = find:

[options.extras_require]
plot = matplotlib>=3.1.1,!=3.3.0,!=3.3.1,!=3.3.2
plot3d =
    mayavi
    tvtk
docs = sphinx >= 1.4

[build_sphinx]
project = $metadata.name
version = $metadata.version
release = $metadata.version
source-dir = docs
