[metadata]
name = xemc3
url = https://github.com/dschwoerer/xemc3
project_urls =
    Tracker = https://github.com/dschwoerer/xemc3/issues
    Documentation = https://xemc3.rtfd.io
author = David Bold
author_email = dave@ipp.mpg.de
description = Collect data from EMC3 runs in python using xarray
license = GPL
python_requires = >=3.6
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Visualization

[options]
setup_requires =
    setuptools>=42
    setuptools_scm[toml]>=3.4
    setuptools_scm_git_archive
install_requires =
    xarray>=0.16.0
    matplotlib>=3.1.1,!=3.3.0,!=3.3.1,!=3.3.2
    netcdf4>=1.4.0
    importlib-metadata; python_version < "3.8"
    numpy >= 1.13.0
    eudist
tests_require =
    pytest >= 3.3.0
    mayavi
    vtk !=9.0.3, !=9.0.2
    matplotlib
    coverage
include_package_data = True
packages = find:

[options.extras_require]
plot = matplotlib>=3.1.1,!=3.3.0,!=3.3.1,!=3.3.2
plot3d =
    mayavi
    vtk !=9.0.3, !=9.0.2

docs =
    sphinx >= 1.4
    sphinx-argparse-cli ; python_version > "3.6"
    nbsphinx >= 0.8.6

full =
    matplotlib>=3.1.1,!=3.3.0,!=3.3.1,!=3.3.2
    mayavi
    vtk !=9.0.3, !=9.0.2
    sphinx >= 1.4
    sphinx-argparse-cli ; python_version > "3.6"
    nbsphinx >= 0.8.6
    numba

[build_sphinx]
project = $metadata.name
version = $metadata.version
release = $metadata.version
source-dir = docs

[options.entry_points]
console_scripts =
    xemc3-append-time = xemc3.cli.append_time:main
    xemc3-to-netcdf = xemc3.cli.to_netcdf:main
    xemc3-divertor = xemc3.cli.xdivertor:main [plot3d]
    xemc3-to-archive = xemc3.cli.to_archive:main
